--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
-  "name": "is-browser",
-  "version": "2.0.0",
+  "name": "forbeslindesay-is-browser",
   "description": "Test whether you're a component in browser or a package in npm",
-  "main": "server.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/ForbesLindesay/is-browser.git"
-  },
-  "author": "ForbesLindesay",
-  "license": "MIT",
-  "browser": "client.js"
+  "version": "2.0.0",
+  "keywords": [],
+  "main": "client.js",
+  "dependencies": {},
+  "license": "MIT"
 }
